--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- 套用字型 -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -10,10 +11,17 @@
 			rel="stylesheet"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite + React</title>
+		<title>Spotify & YouTube Hits</title>
 	</head>
 	<body>
 		<div id="root"></div>
+    <script>
+			window.global = window;
+			window.process = {
+				env: { DEBUG: undefined },
+			};
+			var exports = {};
+		</script>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
 </html>
